Using valueOf instead of creating new instance